--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,15 @@
 <section class="user-section">
-  <h2><%= "Name: #{@user.email}" %></h2>
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">
+        <%= "Name: #{@user.name}" %>
+      </h5>
+      <h6 class="card-subtitle mb-2 text-muted">
+        <%= "Name: #{@user.name}" %>
+      </h6>
+      <a href="#" class="card-link">
+        <%= link_to "Back", users_path %>
+      </a>
+    </div>
+  </div>
 </section>
